[project]
name = "vocavista-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.132.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.2.21",
]
